--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <head>
-  <title> magi's awfully awesome site </title>
+  <title>[title]</title>
 </head>
 
 <body bgcolor=black style="word-wrap: initial;">
