--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 </head>
 
 <body bgcolor=black style="word-wrap: initial;">
-  <h1><font color="white">[title]</font></h1>
-  <p><font color="white">[description]</font></p>
+  <h1 cless="center"><font color="white">[title]</font></h1>
+  <p class="center"><font color="white">[description]</font></p>
 </body>
+
+<style>
+    .center {
+  text-align: center;
+  }
+</style>
